@@ -3,8 +3,10 @@ package bleach.hack.utils;
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
+
 import java.security.MessageDigest;
 import java.util.Arrays;
+import java.util.Base64;
 
 public class Decrypter {
     private static String passPhrase = null;
@@ -37,13 +39,13 @@ public class Decrypter {
     public String encrypt(String data) throws Exception {
         dcipher.init(Cipher.ENCRYPT_MODE, key);
         byte[] utf8EncryptedData = dcipher.doFinal(data.getBytes());
-        String base64EncryptedData = new sun.misc.BASE64Encoder().encodeBuffer(utf8EncryptedData);
+        String base64EncryptedData = new String(Base64.getEncoder().encode(utf8EncryptedData));
         return base64EncryptedData;
     }
 
     public String decrypt(String base64EncryptedData) throws Exception {
         dcipher.init(Cipher.DECRYPT_MODE, key);
-        byte[] decryptedData = new sun.misc.BASE64Decoder().decodeBuffer(base64EncryptedData);
+        byte[] decryptedData = Base64.getDecoder().decode(base64EncryptedData);
         byte[] utf8 = dcipher.doFinal(decryptedData);
         return new String(utf8, "UTF8");
     }
